@@ -1,3 +1,6 @@
+ftransc 5.1.3 (09 Aug 2015):
+	+ fixed working out ffmpeg/avconv utility
+
 ftransc 5.1.1 (19 Nov 2013):
 	+ fixed broken nautilus scripts
 	+ added convert to avi video (experimental)
@@ -12,7 +15,7 @@ ftransc 5.0.9 (02 Feb 2013):
 
 ftransc 5.0.8 (13 Jan 2013):
 	+ using FFmpeg to encode any supported format where possible
-	
+
 ftransc 5.0.7 (04 Nov 2012):
 	+ Added cover art insertion support to flac files
 
@@ -195,5 +198,5 @@ ftransc 3.0 (24 Oct 2009):
 	+ using FFmpeg to decode any type of input audio file.
 
 ftransc 2.5 (20 Oct 2009):
-	- Removed decoding to WAV format first because temporarily consumes 
+	- Removed decoding to WAV format first because temporarily consumes
 	a lot of space and is slower.
